# scaffolding

./: Makefile  app.py  clustering.py  pyproject.toml  test_app.py
.github/workflows/: main.yml
templates/: swagger.yml
