[tool.poetry]
name = "scaffcluster"
version = "0.1.0"
description = ""
authors = ["warhammer21 <shreyakvashisht21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.5"
requests = "2.32.2"
Flask = "^3.0.3"
scikit-learn = "1.0.2"
flasgger = "^0.9.7.1"
black = "24.4.2"
pylint = "3.2.2"
urllib3 = "1.26.15"  # Add compatible urllib3 version
charset_normalizer = "2.0.12"  # Add compatible charset_normalizer version
